name:                ExtractRafFiles
version:             0.1.0.0
synopsis:            Simple script to extract RAW + Jpeg files from subdir
description:         Please see README.md
homepage:            https://github.com/lucamolteni/extractRafFiles
license:             BSD3
license-file:        LICENSE
author:              Luca Molteni
maintainer:          volothamp@gmail.com
copyright:           2015 Luca Molteni
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ExtractRafFiles
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                       , turtle
                       , system-filepath
                       , directory
